# immich-albums

./: Cargo.toml  README.md  immich-openapi-specs.json  openapi_generate
crates/openapi_client/: Cargo.toml  README.md
crates/openapi_client/.openapi-generator/: FILES
crates/openapi_client/docs/: ActivityApi.md  ActivityResponseDto.md  AddUsersDto.md  AlbumApi.md  AlbumResponseDto.md  AllJobStatusResponseDto.md  ApiKeyApi.md  AssetApi.md  AssetBulkUpdateDto.md  AssetFileUploadResponseDto.md  AssetResponseDto.md  AuthenticationApi.md  CreateAlbumDto.md  CreateLibraryDto.md  CreateUserDto.md  DeleteUserDto.md  DownloadApi.md  FaceApi.md  FileReportApi.md  JobApi.md  JobName.md  LibraryApi.md  LibraryResponseDto.md  LibraryType.md  MemoryApi.md  MemoryLaneResponseDto.md  MetadataSearchDto.md  OAuthApi.md  PartnerApi.md  PartnerResponseDto.md  PersonApi.md  ServerFeaturesDto.md  ServerInfoApi.md  ServerInfoResponseDto.md  SharedLinkApi.md  SystemConfigApi.md  SystemConfigFFmpegDto.md  SystemConfigMachineLearningDto.md  TagApi.md  ThumbnailFormat.md  (+5 more)
crates/openapi_client/src/apis/: activity_api.rs  album_api.rs  api_key_api.rs  asset_api.rs  audit_api.rs  authentication_api.rs  configuration.rs  download_api.rs  face_api.rs  file_report_api.rs  job_api.rs  library_api.rs  memory_api.rs  mod.rs  o_auth_api.rs  partner_api.rs  person_api.rs  search_api.rs  server_info_api.rs  sessions_api.rs  shared_link_api.rs  sync_api.rs  system_config_api.rs  system_metadata_api.rs  tag_api.rs  timeline_api.rs  trash_api.rs  (+1 more)
src/: album.rs  external_albums.rs  locator.rs  main.rs
(+186 files in other folders)
