[package]
name = "immich-albums"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
openapi = { path = "./crates/openapi_client/" }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["tokio-macros", "full"] }
anyhow = "1.0.83"
walkdir = "2.5.0"
toml = "0.8.12"
uuid = "1.8.0"
glob = "0.3.1"
log = { version = "0.4.21", features = ["kv", "kv_std"] }
env_logger = "0.11.3"
regex = "1.10.4"
derive_more = "0.99.17"
